added the relation between user and statuses, also defined another method on the user model

--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -11,7 +11,8 @@
     </div>
   <% end %>
 
-  <%= f.input :content%>
+  <%= f.input :user_id %>
+  <%= f.input :content %>
 
   <div class="form-actions">
     <%= f.button :submit %>
