--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,23 @@
-<h2 xmlns="http://www.w3.org/1999/html">Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: "well"}) do |f| %>
+  <fieldset>
     <%= devise_error_messages! %>
+    <legend>Sign up</legend>
 
-    <div><%= f.label :first_name %><br />
-      <%= f.text_field :first_name %></div>
+    <div><%= f.input :first_name, :autofocus => true %></div>
 
-    <div><%= f.label :last_name %><br />
-      <%= f.text_field :last_name %></div>
+    <div><%= f.input :last_name %></div>
 
-    <div><%= f.label :profile_name %><br />
-      <%= f.text_field :profile_name %></div>
+    <div><%= f.input :profile_name %></div>
 
 
-    <div><%= f.label :email %><br />
-      <%= f.email_field :email, :autofocus => true %></div>
+    <div><%= f.input :email %></div>
 
-    <div><%= f.label :password %><br />
-      <%= f.password_field :password %></div>
+    <div><%= f.input :password %></div>
 
-    <div><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></div>
+    <div><%= f.input :password_confirmation %></div>
 
-    <div><%= f.submit "Sign up" %></div>
+    <div><%= f.button :submit, "Sign up" %></div>
+  </fieldset>
 <% end %>
 
 <%= render "devise/shared/links" %>
