--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <% if user_signed_in? %>
           <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
-         <% else %>
+        <% else %>
           <li><%= link_to "Register", new_user_registration_path %></li>
           <li><%= link_to "Log In", new_user_session_path %></li>
         <% end %>
@@ -28,9 +28,12 @@
   </div>
 </div>
 <div class="container">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
+  <% flash.each do |type, message|  %>
+    <div class="alert <% flash_class type%>">
+      <button class="close" data-dismiss="alert">x</button>
+      <strong><%= message %></strong>
+    </div>
+  <% end %>
   <%= yield %>
 </div>
 </body>
