--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -16,7 +16,11 @@
           <div class="meta">
             <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
             <span class="admin">
-              | <%= link_to "Edit", edit_status_path(status) %>
+              | <% if status.user == current_user %>
+                  <%= link_to "Edit", edit_status_path(status) %>
+                <% else %>
+                  <%= link_to "Show", status_path(status) %>
+                <% end %>
               | <%= link_to "Delete", status, method: :delete,
                           data: {confirm: "Are you sure to delete this comment?" }%>
             </span>
