--- a/app/views/user_friendships/index.html.erb
+++ b/app/views/user_friendships/index.html.erb
@@ -11,10 +11,14 @@
     <div class="span7">
       <strong> <%= friend.full_name %></strong><br />
       <% if friendship.pending? %>
-        <em>Friendship is pending.</em> <%= link_to "Delete request", edit_user_friendship_path(friendship) %>
+        <em>Friendship is pending.</em>
+        <%= link_to "Delete request",
+                    edit_user_friendship_path(friendship.friend.profile_name) %>
       <% end %>
       <% if friendship.requested? %>
-        <em>Friendship is requested.</em> <%= link_to "Accept friendship", edit_user_friendship_path(friendship) %>
+        <em>Friendship is requested.</em>
+        <%= link_to "Accept friendship",
+                    edit_user_friendship_path(friendship.friend.profile_name) %>
       <% end %>
       <% if friendship.accepted? %>
         <em>Friendship started at <%= friendship.updated_at %>.</em> <%= link_to "Update friendship", edit_user_friendship_path(friendship) %>
