Nearly completed the whoe second course... just one video left

--- a/app/views/user_friendships/edit.html.erb
+++ b/app/views/user_friendships/edit.html.erb
@@ -23,8 +23,14 @@
                  method: :put do %>
       <%= submit_tag "Accept Friendship", class: 'btn btn-primary' %>
     <% end %>
-
   <% end %>
+
+  <%= form_for @user_friendship,
+               url: block_user_friendship_path(@user_friendship),
+               method: :put do %>
+    <%= submit_tag "Block Friendship", class: 'btn' %>
+  <% end %>
+
 
   <%= form_for @user_friendship,
                url: accept_user_friendship_path(@user_friendship),
