--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,31 +1,24 @@
 <div class="page-header">
-  <h1>All of the statuses</h1>
+  <h1>All of the Statuses</h1>
 </div>
 
-<%= link_to "Post a New Status", new_status_path, class: "btn"  %>
+<%= link_to "Post a New Status", new_status_path, class: "btn btn-success" %>
 
 <% @statuses.each do |status| %>
   <% if can_display_status?(status) %>
-    <div class="status">
-      <div class="row">
-        <div class="span1">
-          <%= link_to image_tag(status.user.gravatar_url), profile_path(status.user) %>
-        </div>
-        <div class="span7">
-          <strong><%= status.user.full_name %></strong>
-          <p><%= status.content %></p>
-          <div class="meta">
-            <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+    <div class="status media">
+      <%= avatar_profile_link status.user, {}, class: 'pull-left' %>
+      <div class="media-body">
+        <h4 class="media-heading"><%= status.user.full_name %></h4>
+        <p><%= status.content %></p>
+        <div class="meta">
+          <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+          <% if signed_in? && current_user == status.user %>
             <span class="admin">
-              | <% if status.user == current_user %>
-                  <%= link_to "Edit", edit_status_path(status) %>
-                <% else %>
-                  <%= link_to "Show", status_path(status) %>
-                <% end %>
-              | <%= link_to "Delete", status, method: :delete,
-                          data: {confirm: "Are you sure to delete this comment?" }%>
+              | <%= link_to "Edit", edit_status_path(status) %> |
+              <%= link_to "Delete", status, method: :delete, data: { confirm: "Are you sure your want to delete this status?"} %>
             </span>
-          </div>
+          <% end %>
         </div>
       </div>
     </div>
