--- a/app/views/user_friendships/new.html.erb
+++ b/app/views/user_friendships/new.html.erb
@@ -5,8 +5,8 @@
   <%= form_for @user_friendship, method: :post do |form| %>
     <div class="form form-actions">
       <%= form.hidden_field :friend_id, value: @friend.profile_name %>
-      <%= submit_tag "Yes, Add Friend", class: "btn btn-primary" %>
-      <%= link_to "Cancel", profile_path(@friend), class: "btn" %>
+      <%= submit_tag "Yes, Add Friend", class: 'btn btn-primary' %>
+      <%= link_to "Cancel", profile_path(@friend), class: 'btn' %>
     </div>
   <% end %>
 <% end %>
