--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -15,6 +15,9 @@
     </p>
 
     <hr />
+
+    <%= status_document_link(@status) %>
+
     <div class="meta">
       <%= link_to 'Back', statuses_path %>
       <% if signed_in? && @status.user == current_user %>
