--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { class: "well", :method => :put }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { class: "well form-horizontal", :method => :put, multipart: true}) do |f| %>
   <%= devise_error_messages! %>
   <fieldset>
     <legend>Edit <%= resource_name.to_s.humanize %></legend>
@@ -21,10 +21,23 @@
     <div><%= f.button :submit, "Update" %></div>
 
   </fieldset>
+
+  <fieldset>
+    <legend>Profile Picture</legend>
+    <%= f.input :avatar, as: :file %>
+    <% if f.object.avatar? %>
+      <div class="control-group">
+        <label class="control-label">Current avatar</label>
+        <div class="controls">
+          <%= image_tag f.object.avatar.url(:small) %>
+        </div>
+      </div>
+    <% end %>
+  </fieldset>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 <%= link_to "Back", :back %>
